[gd_scene load_steps=23 format=3 uid="uid://c1jhl0yv0pxn3"]

[ext_resource type="Script" path="res://ui/achievements/Achievements.gd" id="1_tkc4b"]
[ext_resource type="PackedScene" uid="uid://ktpcywh6e5tr" path="res://ui/achievements/Achievement.tscn" id="2_5r5vf"]
[ext_resource type="Theme" uid="uid://70yhvrg7ebw" path="res://ui/theme.tres" id="3_hkuab"]
[ext_resource type="Texture2D" uid="uid://chkp5rhucac5h" path="res://assets/codes.png" id="3_pxb2w"]
[ext_resource type="Texture2D" uid="uid://bmy7nrayfqr8k" path="res://assets/back_button.png" id="5_0qh0j"]
[ext_resource type="Texture2D" uid="uid://c4iif6mruw61b" path="res://assets/hints.png" id="6_tya2v"]

[sub_resource type="Shader" id="Shader_qxdif"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform int id;
uniform sampler2D base;

ivec2 shift1() {
    switch(id) {
    case 0:  return ivec2( 0,  0);
    case 1:  return ivec2( 6,  0);
    case 2:  return ivec2(12,  0);
    case 3:  return ivec2(18,  0);
    case 4:  return ivec2( 0,  6);
    case 5:  return ivec2( 6,  6);
    case 6:  return ivec2(12,  6);
    case 7:  return ivec2(18,  6);
    default: return ivec2( 0,  0);
    }
}

ivec2 shift2() {
    return shift1() + ivec2(0, 12);
}

ivec2 to_ivec(vec2 uv) {
    return ivec2(floor(uv * vec2(6.0, 6.0)));
}

void fragment() {
	COLOR.a = 1.0;
    bool t1 = texelFetch(base, shift1() + to_ivec(UV), 0).r > 0.5;
    bool t2 = texelFetch(base, shift2() + to_ivec(UV), 0).r > 0.5;
    COLOR.rgb = vec3(t1 != t2 ? 1.0 : 0.0);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vwjri"]
resource_local_to_scene = true
shader = SubResource("Shader_qxdif")
shader_parameter/id = 0
shader_parameter/base = ExtResource("3_pxb2w")

[sub_resource type="Shader" id="Shader_gimfh"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform int id;
uniform sampler2D base;

ivec2 shift1() {
    switch(id) {
    case 0:  return ivec2( 0,  0);
    case 1:  return ivec2( 6,  0);
    case 2:  return ivec2(12,  0);
    case 3:  return ivec2(18,  0);
    case 4:  return ivec2( 0,  6);
    case 5:  return ivec2( 6,  6);
    case 6:  return ivec2(12,  6);
    case 7:  return ivec2(18,  6);
    default: return ivec2( 0,  0);
    }
}

ivec2 shift2() {
    return shift1() + ivec2(0, 12);
}

ivec2 to_ivec(vec2 uv) {
    return ivec2(floor(uv * vec2(6.0, 6.0)));
}

void fragment() {
	COLOR.a = 1.0;
    bool t1 = texelFetch(base, shift1() + to_ivec(UV), 0).r > 0.5;
    bool t2 = texelFetch(base, shift2() + to_ivec(UV), 0).r > 0.5;
    COLOR.rgb = vec3(t1 != t2 ? 1.0 : 0.0);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jogd7"]
resource_local_to_scene = true
shader = SubResource("Shader_gimfh")
shader_parameter/id = 1
shader_parameter/base = ExtResource("3_pxb2w")

[sub_resource type="Shader" id="Shader_jqlyy"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform int id;
uniform sampler2D base;

ivec2 shift1() {
    switch(id) {
    case 0:  return ivec2( 0,  0);
    case 1:  return ivec2( 6,  0);
    case 2:  return ivec2(12,  0);
    case 3:  return ivec2(18,  0);
    case 4:  return ivec2( 0,  6);
    case 5:  return ivec2( 6,  6);
    case 6:  return ivec2(12,  6);
    case 7:  return ivec2(18,  6);
    default: return ivec2( 0,  0);
    }
}

ivec2 shift2() {
    return shift1() + ivec2(0, 12);
}

ivec2 to_ivec(vec2 uv) {
    return ivec2(floor(uv * vec2(6.0, 6.0)));
}

void fragment() {
	COLOR.a = 1.0;
    bool t1 = texelFetch(base, shift1() + to_ivec(UV), 0).r > 0.5;
    bool t2 = texelFetch(base, shift2() + to_ivec(UV), 0).r > 0.5;
    COLOR.rgb = vec3(t1 != t2 ? 1.0 : 0.0);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rvq7t"]
resource_local_to_scene = true
shader = SubResource("Shader_jqlyy")
shader_parameter/id = 2
shader_parameter/base = ExtResource("3_pxb2w")

[sub_resource type="Shader" id="Shader_px5gp"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform int id;
uniform sampler2D base;

ivec2 shift1() {
    switch(id) {
    case 0:  return ivec2( 0,  0);
    case 1:  return ivec2( 6,  0);
    case 2:  return ivec2(12,  0);
    case 3:  return ivec2(18,  0);
    case 4:  return ivec2( 0,  6);
    case 5:  return ivec2( 6,  6);
    case 6:  return ivec2(12,  6);
    case 7:  return ivec2(18,  6);
    default: return ivec2( 0,  0);
    }
}

ivec2 shift2() {
    return shift1() + ivec2(0, 12);
}

ivec2 to_ivec(vec2 uv) {
    return ivec2(floor(uv * vec2(6.0, 6.0)));
}

void fragment() {
	COLOR.a = 1.0;
    bool t1 = texelFetch(base, shift1() + to_ivec(UV), 0).r > 0.5;
    bool t2 = texelFetch(base, shift2() + to_ivec(UV), 0).r > 0.5;
    COLOR.rgb = vec3(t1 != t2 ? 1.0 : 0.0);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_shu8l"]
resource_local_to_scene = true
shader = SubResource("Shader_px5gp")
shader_parameter/id = 3
shader_parameter/base = ExtResource("3_pxb2w")

[sub_resource type="Shader" id="Shader_w1hxi"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform int id;
uniform sampler2D base;

ivec2 shift1() {
    switch(id) {
    case 0:  return ivec2( 0,  0);
    case 1:  return ivec2( 6,  0);
    case 2:  return ivec2(12,  0);
    case 3:  return ivec2(18,  0);
    case 4:  return ivec2( 0,  6);
    case 5:  return ivec2( 6,  6);
    case 6:  return ivec2(12,  6);
    case 7:  return ivec2(18,  6);
    default: return ivec2( 0,  0);
    }
}

ivec2 shift2() {
    return shift1() + ivec2(0, 12);
}

ivec2 to_ivec(vec2 uv) {
    return ivec2(floor(uv * vec2(6.0, 6.0)));
}

void fragment() {
	COLOR.a = 1.0;
    bool t1 = texelFetch(base, shift1() + to_ivec(UV), 0).r > 0.5;
    bool t2 = texelFetch(base, shift2() + to_ivec(UV), 0).r > 0.5;
    COLOR.rgb = vec3(t1 != t2 ? 1.0 : 0.0);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tvoew"]
resource_local_to_scene = true
shader = SubResource("Shader_w1hxi")
shader_parameter/id = 4
shader_parameter/base = ExtResource("3_pxb2w")

[sub_resource type="AtlasTexture" id="AtlasTexture_g0cao"]
atlas = ExtResource("5_0qh0j")
region = Rect2(0, 0, 12, 12)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_r8isc"]
atlas = ExtResource("5_0qh0j")
region = Rect2(12, 0, 12, 12)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_78olm"]
atlas = ExtResource("5_0qh0j")
region = Rect2(12, 0, 12, 12)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_46uaj"]
atlas = ExtResource("5_0qh0j")
region = Rect2(12, 0, 12, 12)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_iepyy"]
atlas = ExtResource("6_tya2v")
region = Rect2(50, 9, 17, 9)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_rrnrk"]
atlas = ExtResource("6_tya2v")
region = Rect2(15, 64, 15, 15)
filter_clip = true

[node name="Achievements" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("Center/Achievement1")
focus_neighbor_top = NodePath("Center/Achievement1")
focus_neighbor_right = NodePath("Center/Achievement1")
focus_neighbor_bottom = NodePath("Center/Achievement1")
focus_next = NodePath("Center/Achievement1")
focus_previous = NodePath("Center/Achievement1")
focus_mode = 2
script = ExtResource("1_tkc4b")

[node name="Center" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -16.0
offset_right = 88.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Achievement1" parent="Center" instance=ExtResource("2_5r5vf")]
layout_mode = 0
focus_neighbor_left = NodePath("../Achievement5")
focus_neighbor_right = NodePath("../Achievement2")
focus_next = NodePath("../Achievement2")
focus_previous = NodePath("../Achievement5")

[node name="Image" parent="Center/Achievement1" index="0"]
material = SubResource("ShaderMaterial_vwjri")

[node name="Achievement2" parent="Center" instance=ExtResource("2_5r5vf")]
layout_mode = 0
offset_left = 36.0
offset_right = 68.0
offset_bottom = 32.0
focus_neighbor_left = NodePath("../Achievement1")
focus_neighbor_right = NodePath("../Achievement3")
focus_next = NodePath("../Achievement3")
focus_previous = NodePath("../Achievement1")

[node name="Image" parent="Center/Achievement2" index="0"]
material = SubResource("ShaderMaterial_jogd7")

[node name="Achievement3" parent="Center" instance=ExtResource("2_5r5vf")]
layout_mode = 0
offset_left = 72.0
offset_right = 104.0
offset_bottom = 32.0
focus_neighbor_left = NodePath("../Achievement2")
focus_neighbor_right = NodePath("../Achievement4")
focus_next = NodePath("../Achievement4")
focus_previous = NodePath("../Achievement2")

[node name="Image" parent="Center/Achievement3" index="0"]
material = SubResource("ShaderMaterial_rvq7t")

[node name="Achievement4" parent="Center" instance=ExtResource("2_5r5vf")]
layout_mode = 0
offset_left = 108.0
offset_right = 140.0
offset_bottom = 32.0
focus_neighbor_left = NodePath("../Achievement3")
focus_neighbor_right = NodePath("../Achievement5")
focus_next = NodePath("../Achievement5")
focus_previous = NodePath("../Achievement3")

[node name="Image" parent="Center/Achievement4" index="0"]
material = SubResource("ShaderMaterial_shu8l")

[node name="Achievement5" parent="Center" instance=ExtResource("2_5r5vf")]
layout_mode = 0
offset_left = 144.0
offset_right = 176.0
offset_bottom = 32.0
focus_neighbor_left = NodePath("../Achievement4")
focus_neighbor_right = NodePath("../Achievement1")
focus_next = NodePath("../Achievement1")
focus_previous = NodePath("../Achievement4")

[node name="Image" parent="Center/Achievement5" index="0"]
material = SubResource("ShaderMaterial_tvoew")

[node name="Bottom" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -36.0
grow_horizontal = 2
grow_vertical = 0

[node name="Delimiter" type="ColorRect" parent="Bottom"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2

[node name="Description" type="Label" parent="Bottom"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_hkuab")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 12.0
offset_bottom = 12.0
focus_mode = 0
texture_normal = SubResource("AtlasTexture_g0cao")
texture_pressed = SubResource("AtlasTexture_r8isc")
texture_hover = SubResource("AtlasTexture_78olm")
texture_focused = SubResource("AtlasTexture_46uaj")

[node name="BackHint" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 1.0
offset_top = 15.0
offset_right = 18.0
offset_bottom = 42.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 1

[node name="Backspace" type="TextureRect" parent="BackHint"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_iepyy")

[node name="L1" type="TextureRect" parent="BackHint"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_rrnrk")

[connection signal="request_description" from="Center/Achievement1" to="." method="_on_achievement_1_request_description"]
[connection signal="request_description" from="Center/Achievement2" to="." method="_on_achievement_2_request_description"]
[connection signal="request_description" from="Center/Achievement3" to="." method="_on_achievement_3_request_description"]
[connection signal="request_description" from="Center/Achievement4" to="." method="_on_achievement_4_request_description"]
[connection signal="request_description" from="Center/Achievement5" to="." method="_on_achievement_5_request_description"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]

[editable path="Center/Achievement1"]
[editable path="Center/Achievement2"]
[editable path="Center/Achievement3"]
[editable path="Center/Achievement4"]
[editable path="Center/Achievement5"]
